# headway

./: .dockerignore  .gitignore  .grype.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  HANDOFF.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md
.claude/roles/: AI_SYSTEMS_ENGINEER.md  BACKEND_ENGINEER.md  COMMUNITY_MAINTAINER.md  DATA_ENGINEER.md  DEVOPS_ENGINEER.md  DOCS_ENGINEER.md  FRONTEND_ENGINEER.md  INGESTION_ENGINEER.md  NTD_COMPLIANCE_ENGINEER.md  PLATFORM_ARCHITECT.md  QA_ENGINEER.md  README.md  SECURITY_ENGINEER.md  _SHARED_CONSTRAINTS.md
.design-sync/: NOTES.md  config.json  conventions.md
.design-sync/previews/: ChartCard.tsx  LineageGraph.tsx  Modal.tsx  Receipt.tsx  SeverityIcon.tsx  SeverityStackedBar.tsx  SimulatedBadge.tsx  TimeSeriesChart.tsx
.github/: dependabot.yml
.github/workflows/: README.md  ci.yml  rebuild-scan.yml  release.yml
adapters/: README.md  validate
adapters/_reference/: README.md
clients/python/: README.md  pyproject.toml
clients/python/headway_client/: __init__.py  client.py  frames.py  models.py
clients/python/tests/: conftest.py  test_client.py  test_frames.py  test_lineage.py  test_models.py
contracts/: README.md  adapter-mapping.v0.md  adapter-mapping.v0.schema.json  demand-response-trip.v0.md  demand-response-trip.v0.schema.json  raw-record-envelope.v0.schema.json  topics.v0.md
db/: README.md  migrate.py  requirements.txt  test_migrations_static.py
db/migrations/: 0001_extensions_and_schemas.sql  0002_raw_records.sql  0003_canonical_tables.sql  0004_computed_metric_values.sql  0005_lineage_edges.sql  0006_dq_issues.sql  0007_audit_events.sql  0008_cert_certifications.sql  0009_auth_users.sql  0010_metric_values_detail.sql  0011_trips_block_id.sql  0012_passenger_events.sql  0013_machine_api.sql  0014_app_settings.sql  0015_branding_settings.sql  0016_dq_effort.sql  0017_safety_events.sql  0018_safety_runaway_evacuation.sql  0019_stops_stop_times.sql  0020_sampling_plans.sql  0021_dr_trips.sql  0022_draw_seed_source.sql  (+9 more)
docs/: analyst-access.md  connecting-your-data.md  network-access.md  sizing.md  supply-chain.md  updating.md
install/: README.md  install.sh  uninstall.sh
notebooks/: 01-ridership-exploration.ipynb  02-otp-headway-adherence.ipynb  03-dq-triage.ipynb  README.md
scripts/: license_allowlist.toml  license_gate.py  parity_gate.md  sbom_local.sh
services/ai/: DETECTOR_THRESHOLDS.md  Dockerfile  README.md  pyproject.toml
services/ai/eval_fixtures/: 01_grounded_pass.json  02_dangling_citation_fail.json  03_fabricated_number_fail.json  04_wrong_record_kind_fail.json  05_anomaly_swing_explanation_pass.json  06_anomaly_fabricated_explanation_fail.json
services/ai/headway_ai/: __init__.py  anomaly.py  anomaly_explain.py  anomaly_runner.py  claims.py  grounding.py  provider.py  regression.py
services/ai/tests/: conftest.py  test_anomaly.py  test_anomaly_explain.py  test_anomaly_runner.py  test_claims.py  test_grounding_checks.py  test_numeric_extraction.py  test_provider.py  test_regression.py
services/api/: Dockerfile  README.md  openapi.json  pyproject.toml
services/api/headway_api/: __init__.py  app.py  audit.py  auth.py  authz.py  branding.py  db.py  exports.py  machine_auth.py  signing.py  webhooks.py
services/api/headway_api/routers/: attestations.py  branding.py  certify.py  dq.py  geometry.py  history.py  ingest.py  machine_keys.py  machine_read.py  metrics.py  ops.py  public.py  reports.py  safety.py  sampling.py  sandbox.py  settings.py
services/api/scripts/: export_openapi.py
services/api/tests/: conftest.py  test_attestations.py  test_auth.py  test_authz.py  test_branding.py  test_certify.py  test_compare.py  test_counts.py  test_dq.py  test_exports.py  test_geometry.py  test_history.py  test_ingest.py  test_ingest_dr.py  test_machine_keys.py  test_machine_read.py  test_metrics.py  test_ops_vehicles.py  test_public.py  test_reports.py  test_safety.py  test_sampling.py  test_sandbox.py  test_service_days.py  test_settings.py  test_signature.py  test_transaction_discipline.py  test_webhooks.py  test_workbook.py
services/calc/: OPS_DEFINITIONS.md  README.md  REGULATORY_TRACKER.md  pyproject.toml
services/calc/headway_calc/: __init__.py  _blocks.py  _cli.py  _grouping.py  attestation.py  daytype.py  distance.py  dq.py  dr.py  mode.py  mr20.py  ops.py  passages.py  persist.py  pmt.py  reader.py  registry.py  runner.py  sampling.py  settings.py  ss50.py  sscls.py  types.py  upt.py  voms.py  vrh.py  vrm.py
services/calc/tests/: conftest.py  test_attestation.py  test_core_units.py  test_daytype.py  test_dq.py  test_dr.py  test_golden.py  test_golden_daytype.py  test_golden_dr.py  test_golden_mode.py  test_golden_ops.py  test_golden_pmt.py  test_golden_sampling.py  test_golden_upt.py  test_golden_v02.py  test_golden_v03.py  test_golden_v04.py  test_golden_voms.py  test_mode.py  test_mr20.py  test_ops.py  test_passages.py  test_persist.py  test_pmt.py  test_pmt_attestation.py  test_preview.py  test_properties.py  test_properties_dr.py  test_properties_mode.py  test_properties_ops.py  test_properties_pmt.py  test_properties_sampling.py  test_properties_upt.py  test_properties_v02.py  test_properties_v03.py  test_properties_v04.py  test_properties_voms.py  test_purity.py  test_reader.py  test_registry.py  (+15 more)
services/transform/: Dockerfile  README.md  pyproject.toml
services/transform/headway_transform/: __init__.py  __main__.py  consumer.py  dr_trips.py  envelope.py  gtfs_rt_positions.py  gtfs_static.py  kafka_source.py  model.py  row_guard.py  tides_passenger_events.py  trip_updates.py  writer.py
services/transform/headway_transform/adapters/: __init__.py  engine.py  harness.py  registry.py  spec.py
services/transform/tests/: conftest.py  test_adapters.py  test_consumer.py  test_dr_trips.py  test_envelope.py  test_gtfs_rt_positions.py  test_gtfs_static.py  test_hardening.py  test_tides_passenger_events.py  test_trip_updates.py  test_writer.py
web/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
(+246 files in other folders)
