[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "headway-ai"
version = "0.1.0"
description = "Headway AI layer: pluggable provider abstraction + the grounding evaluation harness. Never computes a reported number; proves it never fabricates."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
# Core is stdlib-only by design (ADR-0001: nothing to license-review on the
# critical path; the harness runs anywhere Python 3.12 runs).
dependencies = []

[project.optional-dependencies]
# httpx: BSD-3-Clause (OSI permissive) — only needed for the optional local
# OpenAI-compatible adapter (OllamaProvider); lazily imported, never on the
# test or harness path.
ollama = ["httpx>=0.27"]
# pytest: MIT (OSI permissive).
test = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["headway_ai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
