[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "headway-api"
version = "0.1.0"
description = "Headway API: computed transit metrics with lineage, DQ workflow, and the audited certification action. Never originates a figure."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "psycopg[binary]>=3.1",
    "PyJWT>=2.8",         # MIT
    "bcrypt>=4.1",        # Apache-2.0 — password hashing choice (ADR-0001: OSI permissive)
    "httpx>=0.27",        # BSD-3-Clause — signed webhook delivery (handoff 0006);
                          # moved from the test extra (it also backs fastapi.testclient)
]

[project.optional-dependencies]
# Machine ingest (handoff 0006): object store + broker clients. Optional so a
# read-only deployment carries neither; without them the ingest endpoint
# refuses with a plain-language 503 (never a silent accept).
ingest = [
    "minio>=7.2",           # Apache-2.0 — MinIO/S3 object store client
    "kafka-python-ng>=2.2", # Apache-2.0 — Kafka producer (maintained fork)
]
test = [
    "pytest>=8",
    "jsonschema>=4.21",   # MIT — ingest envelopes validated against the actual contract schema
]

[tool.setuptools.packages.find]
include = ["headway_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
