[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "headway-api"
version = "0.1.0"
description = "Headway API: computed transit metrics with lineage, DQ workflow, and the audited certification action. Never originates a figure."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "psycopg[binary]>=3.1",
    "PyJWT>=2.8",         # MIT
    "bcrypt>=4.1",        # Apache-2.0 — password hashing choice (ADR-0001: OSI permissive)
    "httpx>=0.27",        # BSD-3-Clause — signed webhook delivery (handoff 0006);
                          # moved from the test extra (it also backs fastapi.testclient)
    "python-multipart>=0.0.9",  # Apache-2.0 — multipart parsing for the
                                # branding logo upload (handoff 0008 pillar C)
    "openpyxl>=3.1",      # MIT — server-side XLSX export alongside CSV
                          # (handoff 0017 design point 5); values written as
                          # TEXT cells so figures stay byte-equal to the CSV
                          # (floating point never touches a figure)
    "headway-calc>=0.5",  # Apache-2.0 — SIBLING PATH PACKAGE (services/calc,
                          # not on PyPI): GET /reports/mr20 imports
                          # headway_calc.mr20 and serves its package verbatim
                          # (handoff 0009). Install from the repo first
                          # (`pip install services/calc`); the api Docker
                          # image must do the same — Dockerfile follow-up,
                          # see README "MR-20 preview report".
]

[project.optional-dependencies]
# Machine ingest (handoff 0006): object store + broker clients. Optional so a
# read-only deployment carries neither; without them the ingest endpoint
# refuses with a plain-language 503 (never a silent accept).
ingest = [
    "minio>=7.2",           # Apache-2.0 — MinIO/S3 object store client
    "kafka-python-ng>=2.2", # Apache-2.0 — Kafka producer (maintained fork)
]
test = [
    "pytest>=8",
    "jsonschema>=4.21",   # MIT — ingest envelopes validated against the actual contract schema
]

[tool.setuptools.packages.find]
include = ["headway_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
