[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "headway-calc"
version = "0.3.0"
description = "Headway deterministic calculation library (NTD metrics). Pure, versioned, stdlib-only core; every reported number originates here with full lineage."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
# The core is stdlib-only by design (no runtime dependencies): calculations
# are deterministic and offline — no network, no clock reads, no randomness.
dependencies = []

[project.optional-dependencies]
# persist_result takes any DB-API connection; psycopg is only needed to talk
# to a real PostgreSQL and is deliberately NOT a core dependency.
persist = ["psycopg[binary]>=3.1"]
test = ["pytest>=8", "hypothesis>=6"]

[tool.setuptools.packages.find]
include = ["headway_calc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
