[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "headway-transform"
version = "0.1.0"
description = "Headway transform service: raw-record normalizers with explicit lineage and fail-loudly DQ (ADR-0009 walking skeleton)"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    # Envelope contract validation (MIT).
    "jsonschema>=4.21",
    # GTFS-Realtime FeedMessage protobuf bindings (Apache-2.0).
    "gtfs-realtime-bindings>=1.0.0",
]

[project.optional-dependencies]
# Kafka client is optional so unit tests run without it; the consumer loop
# only touches it through the MessageSource interface (consumer.py).
kafka = [
    # kafka-python-ng (Apache-2.0), maintained fork of kafka-python.
    "kafka-python-ng>=2.2",
]
# Production DB driver (LGPL-3.0 with linking exception; driver only, not
# linked into core logic — writer takes any DB-API connection).
db = ["psycopg[binary]>=3.1"]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["headway_transform*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
