[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "headway-transform"
version = "0.3.0"
description = "Headway transform service: raw-record normalizers with explicit lineage and fail-loudly DQ (ADR-0009 walking skeleton)"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    # Envelope contract validation (MIT).
    "jsonschema>=4.21",
    # GTFS-Realtime FeedMessage protobuf bindings (Apache-2.0).
    "gtfs-realtime-bindings>=1.0.0",
    # Vendor adapter mapping specs are YAML (handoff 0015; MIT license).
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Kafka client is optional so unit tests run without it; the consumer loop
# only touches it through the MessageSource interface (consumer.py).
kafka = [
    # kafka-python-ng (Apache-2.0), maintained fork of kafka-python.
    "kafka-python-ng>=2.2",
    # Snappy codec (BSD). Required, not optional: the Go ingestion service's
    # franz-go producer snappy-compresses batches by default, and
    # kafka-python-ng cannot decode snappy without this package — confirmed
    # in the 2026-07-09 live run (handoff 0001 Verification Evidence).
    "python-snappy>=0.7",
]
# Production DB driver (LGPL-3.0 with linking exception; driver only, not
# linked into core logic — writer takes any DB-API connection).
db = ["psycopg[binary]>=3.1"]
# Object-store client (Apache-2.0) — ONLY for the __main__ process boundary,
# which builds the ObjectFetcher for payload_encoding='object_ref' envelopes
# (GTFS static zips, TIDES CSVs). Library code takes an injected fetcher and
# never imports it. Same client + env surface as headway-api[ingest].
s3 = ["minio>=7.2"]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["headway_transform*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
